_deploy/ui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  namespace: baseball
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: nschultz/fantasy-baseball-ui:0.6.0
        ports:
          - name: web
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
